react trivia link fixed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <a href="lordsOfWar/lordsOfWar.html">lords of war</a>
   </li>
   <li>
-    <a href="reactTrivia/reactTrivia.html">react trivia</a>
+    <a href="reactTrivia/index.html">react trivia</a>
   </li>
   <li>
     <a href="scoreKeeper/scoreKeeper.html">score keeper</a>
