--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <ul>
   <li>
-    <a href="bobsBurgers/bobsBurgers.html">bobs burgers</a>
+    <a href="bobsBurgers/index.html">bobs burgers</a>
   </li>
   <li>
-    <a href="lordsOfWar/lordsOfWar.html">lords of war</a>
+    <a href="lordsOfWar/index.html">lords of war</a>
   </li>
   <li>
     <a href="reactTrivia/index.html">react trivia</a>
   </li>
   <li>
-    <a href="scoreKeeper/scoreKeeper.html">score keeper</a>
+    <a href="scoreKeeper/index.html">score keeper</a>
   </li>
   <li>
-    <a href="theLanParty/theLanParty.html">the lan party</a>
+    <a href="theLanParty/index.html">the lan party</a>
   </li>
 </ul>
