--- a/lordsOfWar/products.html
+++ b/lordsOfWar/products.html
@@ -25,7 +25,7 @@
         </div>
         <div class="menu">
              <ul>
-                <a href="lordsOfWar.html"><li>home</li></a>
+                <a href="index.html"><li>home</li></a>
                 <a href="products.html"><li id="current">products</li></a>
                 <a href="events.html"><li>events</li></a>
                 <li id="contactButton">contact</li>
